--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 node_modules
 .idea/
-src/scss/out/style.css
-src/css/style.min.css
-src/index.html
+src/css/style\.min\.css
+
+src/index\.html
+
+src/scss/out/style\.css
