--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "gulp-group-css-media-queries": "^1.2.0",
     "gulp-imagemin": "^3.3.0",
     "gulp-notify": "^3.0.0",
+    "gulp-pug": "^3.3.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-uglify": "^3.0.0",
     "gulp-util": "^3.0.8",
-    "imagemin-pngquant": "^5.0.1",
-    "gulp-pug": "^3.3.0"
+    "imagemin-pngquant": "^5.0.1"
   },
   "dependencies": {
     "imagemin-mozjpeg": "^6.0.0",
