--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "gulp watch",
+    "build": "gulp build"
   },
   "author": "",
   "license": "ISC",
